# obj_recog_book

./: README.md  pyproject.toml
src/sec_4/: and_gate.ipynb  xor_tage.ipynb
