[tool.poetry]
name = "obj-recog-book"
version = "0.1.0"
description = ""
authors = ["Daku-on <113434878+Daku-on@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
opencv-contrib-python = "^4.9.0.80"
scikit-learn = "^1.4.2"
japanize-matplotlib = "^1.1.3"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
tensorflow = "^2.16.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
